--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,17 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait">
         </activity>
+
+        <service
+            android:name=".SwitchTileService"
+            android:icon="@drawable/bulboff"
+            android:label="Lights"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
